# bookeeper

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
src/: main.cpp
src/core/: Entities.cpp  Entities.h  JsonStorage.cpp  JsonStorage.h  LedgerService.cpp  LedgerService.h
src/ui/: BillEditorDialog.cpp  BillEditorDialog.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  ReminderDialog.cpp  ReminderDialog.h
tests/: CMakeLists.txt
tests/fuzz/: fuzz_entities.cpp
tests/fuzz/corpus/: bad_types.json  bill.json  category.json  comment_list.json  mixed_social.json  reminder.json  user.json
tests/integration/: basic_flow_tests.cpp  end_to_end_tests.cpp
tests/unit/: auth_social_tests.cpp  category_tests.cpp  json_storage_tests.cpp  ledger_bill_tests.cpp  reminder_tests.cpp  smoke_tests.cpp
